[tool.poetry]
name = "trip-planner-vv"
version = "0.1.0"
description = "A simple trip planner using CrewAI"
authors = ["Vaishnavi Verma <vaishnaviverma1511@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.11.0"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = "1.0.0"
langchain = "0.1.14"
setuptools = "^78.1.0"

[tool.pyright] #check python code for typing errors
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff] #check python code for styling issues
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system] #tool for managing python project dependencies
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"